--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
             </div>
             <div class="box">
                 <video autoplay loop muted src="box1video.mp4"></video>
-                <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format">
+                <img src="box1img.webp">
                 <h2></h2>
             </div>
             <div class="box1">
                 <video autoplay loop muted src="box2video.mp4"></video>
-                <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format">
+                <img src="box2img.webp">
             </div>
             <div class="box2">
                 <video autoplay loop muted src="box3video.mp4"></video>
-                <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format">
+                <img src="box3img.webp">
               </div>
 
 
